dataset1235/2025-2/2318198438/users/3878856075/executions/2601575092_291286518.log
== SUBMISSION (2025-08-26 00:25:00)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite um numero:"))

# Impressao do dobro do numero
print(round)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite um numero:<built-in function round>
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite um numero:<built-in function round>
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite um numero:<built-in function round>
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite um numero:<built-in function round>
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite um numero:<built-in function round>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-18 21:01:37)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("11"))

# Impressao do dobro do numero
print(input(11))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input(11))
          ^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input(11))
          ^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input(11))
          ^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input(11))
          ^^^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(input(11))
          ^^^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 00:44:08)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite um numero:"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite um numero:512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite um numero:2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite um numero:11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite um numero:888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite um numero:22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-18 20:45:17)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("30"))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
30256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
301234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
305678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
30444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
3011
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 00:24:28)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite um numero:"))

# Impressao do dobro do numero
print(round )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite um numero:<built-in function round>
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite um numero:<built-in function round>
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite um numero:<built-in function round>
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite um numero:<built-in function round>
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite um numero:<built-in function round>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-18 20:44:59)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("30"))

# Impressao do dobro do numero
print(30)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
3030
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
3030
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
3030
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
3030
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
3030
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-18 21:00:29)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("11"))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
11
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
11
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
11
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
11
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 01:28:10)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite um numero:"))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite um numero:
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite um numero:
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite um numero:
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite um numero:
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite um numero:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-18 21:00:52)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("11"))

# Impressao do dobro do numero
print(input)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
11<built-in function input>
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
11<built-in function input>
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
11<built-in function input>
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
11<built-in function input>
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
11<built-in function input>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-18 21:37:00)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("256"))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
2561234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
2565678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
256444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
25611
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 01:30:52)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite um numero:"))

# Impressao do dobro do numero
print( var**2 )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print( var**2 )
           ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print( var**2 )
           ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print( var**2 )
           ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print( var**2 )
           ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print( var**2 )
           ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 00:24:57)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite um numero:"))

# Impressao do dobro do numero
print(round)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite um numero:<built-in function round>
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite um numero:<built-in function round>
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite um numero:<built-in function round>
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite um numero:<built-in function round>
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite um numero:<built-in function round>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 00:44:01)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite um numero:"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite um numero:512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite um numero:2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite um numero:11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite um numero:888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite um numero:22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-18 21:36:51)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("256"))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
256
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
256
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
256
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
256
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-18 21:37:40)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("256"))

# Impressao do dobro do numero
print(int)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
256<class 'int'>
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
256<class 'int'>
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
256<class 'int'>
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
256<class 'int'>
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
256<class 'int'>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-18 21:44:51)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(("256"))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
None
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
None
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
None
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
None
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
None
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 01:30:39)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite um numero:"))

# Impressao do dobro do numero
print( var* 2 )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print( var* 2 )
           ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print( var* 2 )
           ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print( var* 2 )
           ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print( var* 2 )
           ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print( var* 2 )
           ^^^
NameError: name 'var' is not defined. Did you mean: 'vars'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 04:57:09)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite um numero:"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite um numero:512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite um numero:2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite um numero:11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite um numero:888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite um numero:22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 01:28:46)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite um numero:"))

# Impressao do dobro do numero
print(num , 2 )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite um numero:256 2
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite um numero:1234 2
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite um numero:5678 2
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite um numero:444 2
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite um numero:11 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 00:44:06)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite um numero:"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite um numero:512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite um numero:2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite um numero:11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite um numero:888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite um numero:22
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-18 20:44:30)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("30"))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
30
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
30
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
30
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
30
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
30
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 04:57:16)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite um numero:"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite um numero:512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite um numero:2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite um numero:11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite um numero:888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite um numero:22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-18 21:37:50)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("256"))

# Impressao do dobro do numero
print(int(input))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(int(input))
          ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(int(input))
          ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(int(input))
          ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(int(input))
          ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(int(input))
          ^^^^^^^^^^
TypeError: int() argument must be a string, a bytes-like object or a real number, not 'builtin_function_or_method'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 01:28:48)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite um numero:"))

# Impressao do dobro do numero
print(num , 2 )
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite um numero:256 2
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite um numero:1234 2
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite um numero:5678 2
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite um numero:444 2
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite um numero:11 2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 00:24:47)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite um numero:"))

# Impressao do dobro do numero
print(round)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite um numero:<built-in function round>
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite um numero:<built-in function round>
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite um numero:<built-in function round>
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite um numero:<built-in function round>
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite um numero:<built-in function round>
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-18 21:37:56)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("256"))

# Impressao do dobro do numero
print(int(input()))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(int(input()))
              ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(int(input()))
              ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(int(input()))
              ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(int(input()))
              ^^^^^^^
EOFError: EOF when reading a line
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    print(int(input()))
              ^^^^^^^
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
